@@ -1,3 +1,7 @@
+2003-05-14  Bernhard Held <bernhard@bernhardheld.de>
+
+        * device/lib/_strtok.c: fixed bug #734355 by Lenny Story and Tim Woodall 
+
 2003-05-13  Bernhard Held <bernhard@bernhardheld.de>
 
 	* src/pic16/*: removed CR from many files, reported by Vangelis Rokas
